<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_permission_status">

    <fragment
        android:id="@+id/navigation_permission_status"
        android:name="com.ihor_il.youtube_music_discord_rich_presence.ui.permission_status.PermissionStatusFragment"
        android:label="@string/title_permission_status"
        tools:layout="@layout/fragment_permission_status" />

    <fragment
        android:id="@+id/navigation_current"
        android:name="com.ihor_il.youtube_music_discord_rich_presence.ui.current.CurrentFragment"
        android:label="@string/title_current"
        tools:layout="@layout/fragment_current" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ihor_il.youtube_music_discord_rich_presence.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>